# TinyML-Rain-Detection

./: .gitignore  .gitmodules  README.md
.github/workflows/: main.yml
docs/: UML.drawio  embedded_pipeline.drawio
example_models/model_one/: model_struct.txt  training.txt
example_models/model_one/final_model_test.pb/: fingerprint.pb  keras_metadata.pb  saved_model.pb
example_models/model_one/final_model_test.pb/variables/: variables.data-00000-of-00001  (+1 more)
example_models/model_vielversprechend/: model_struct.txt  training.txt
example_models/model_vielversprechend/final_model_test.pb/: fingerprint.pb  keras_metadata.pb  saved_model.pb
model_creation/: a.txt  convert_to_tflite.py  final_model.py  hyperparameter_search.py  model.py  model_to_mcu.py  preprocess.py  preprocess_test.py  seed_config.py  test.py  test_model.py  tflite_to_array.sh  utility.py
model_creation/scripts/: create_val_and_test_set.py  create_val_set.py  csv_to_wav.py  plot_spectrogram.py  plot_wave_file.py  test_tflite_model.py  trim_wav_file.py  txt_to_wav.py
model_creation/tuner_dir_old/rain_detection/: oracle.json
tinyml_deployment/: README.md
tinyml_deployment/main/: CMakeLists.txt
tinyml_deployment/main/inc/: Constants.h  DataProvider.h  FeatureProvider.h  Microphone.h  PredictionHandler.h  PredictionInterpreter.h  SDcard.h  Sdcard.h  main.h  main_functions.h  mqtt.h  wifi.h
tinyml_deployment/main/src/: DataProvider.cpp  FeatureProvider.cpp  PredictionHandler.cpp  PredictionInterpreter.cpp  SDcard.cpp  Sdcard.cpp  main.cpp  main_functions.cpp  micro_model.cpp  mqtt.cpp  wifi.cpp
(+299 files in other folders)
